<resources>
    <string name="app_name">WaterSupply</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="neeru">Neeru</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user_create_account">New User! Create Account?</string>
    <string name="powered_by">powered by @pentateuch  www.pentateuch.in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_text">We have sent you OTP to</string>
    <string name="verification">Verification</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="address">Address : </string>
    <string name="proceed">Proceed</string>
    <string name="total">Total :</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="my_order">My Orders</string>
    <string name="order_now">Order Now</string>
    <string name="current">Current</string>
    <string name="product_image">Product Image</string>
    <string name="quantity">Quantity :</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_details">Order Details</string>
    <string name="product">Product</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="amount">Amount :</string>
    <string name="pending">Pending</string>
    <string name="date_and_time">Date and Time</string>
    <string name="set_delivery_data_and_time">Set delivery Data and Time</string>
    <string name="time">Time</string>
</resources>
