<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".activity.OrderSummaryActivity">

    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

        <TextView android:text="@string/transaction_id" android:layout_column="1" />

        <TextView android:id="@+id/tv_transaction_id"  android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/amount"  android:layout_column="1"/>
        <TextView android:id="@+id/tv_transaction_amount"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/status"  android:layout_column="1"/>
        <TextView android:id="@+id/tv_transaction_status"/>
    </TableRow>

</TableLayout>