<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AccountActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_account"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:id="@+id/root_account"
        android:padding="10sp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_account_submit"
        android:background="@drawable/ripple_white_border">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/et_account_mail"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/et_account_pass"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_account_submit"
        android:background="@drawable/ripple_sky_blue"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="submit"
        android:text="@string/submit"/>
</RelativeLayout>