<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/auth_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/root_auth"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/verification"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_phone_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/background_white"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
            android:drawablePadding="15dp"
            android:hint="Enter OTP "
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#545454"
            android:textColorHint="#545454" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_verification_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_time_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_orange"
                android:padding="10dp"
                android:text="@string/resend_otp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#433f3f" />
        </LinearLayout>

        <Button

            android:id="@+id/button_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:background="@drawable/ripple_effect"
            android:padding="10dp"
            android:text="@string/verify_otp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />


    </RelativeLayout>
</RelativeLayout>


